appId: com.skylightsocial.tatum
---
- launchApp
- tapOn: "PROFILE"
- tapOn: "Settings"
- assertVisible: "Display Name"
